[package]
name = "sled_to_postgres"
version = "0.1.0"
authors = ["Pedro Arruda <pedrobittencourt3@protonmail.ch>"]
edition = "2018"
description = "Replicate your Sled database to Postgres"
license = "Apache-2.0"
homepage = "https://github.com/tokahuke/sled_to_postgres"
repository = "https://github.com/tokahuke/sled_to_postgres"
keywords = ["postgres", "postgresql", "sled", "replication"]
readme = "readme.md"
exclude = ["data"]

[dependencies]
yaque = "0.4.2"
sled = "0.34.3"
bincode = "1.3.1"
serde_derive = "1.0.115"
serde = "1.0.115"
log = "0.4.11"
tokio-postgres = "0.5.5"
futures = "0.3.5"
tokio-postgres-rustls = "0.5.0"
tokio = { version = "0.2.22", features = [
    "time", "sync", "rt-threaded", "macros", "blocking"
] }
failure = "0.1.8"
failure_derive = "0.1.8"
hex = "0.4.2"
rustls = "0.18.1"

[dev-dependencies]
simple_logger = "1.9.0"
